--- a/backend/.env.template
+++ b/backend/.env.template
@@ -8,6 +8,18 @@ AZURE_OPENAI_API_VERSION=2024-02-15-preview
 GOOGLE_API_KEY=your-google-api-key-here
 GOOGLE_SEARCH_ENGINE_ID=your-custom-search-engine-id-here
 
+# Search Service Configuration
+# Enable/disable individual search services (true/false)
+ENABLE_GOOGLE_SEARCH=false
+ENABLE_ARXIV_SEARCH=true
+ENABLE_DUCKDUCKGO_SEARCH=true
+ENABLE_BING_SEARCH=true
+
+# Bing Grounding Search (Azure AI Foundry)
+# Required only if ENABLE_BING_SEARCH=true
+AZURE_AI_PROJECT_ENDPOINT=https://<ai-services-account-name>.services.ai.azure.com/api/projects/<project-name>
+BING_GROUNDING_CONNECTION_NAME=bingground
+
 # arXiv API (no authentication required)
 # Rate limit: 1 request per second recommended
 
@@ -18,3 +30,4 @@ PORT=8000
 # Observability (Optional)
 # OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 # OTEL_SERVICE_NAME=deep-research-agent
+
